Fix tooltips not being aligned

--- a/DevilDaggersInfo.Web.BlazorWasm.Client/tailwind.css
+++ b/DevilDaggersInfo.Web.BlazorWasm.Client/tailwind.css
@@ -1,14 +1,5 @@
 @tailwind base;
 @tailwind components;
-
-.tooltip {
-	@apply invisible absolute;
-}
-
-.has-tooltip:hover .tooltip {
-	@apply visible z-50;
-}
-
 @tailwind utilities;
 
 @layer base {
